# bmstu_control_point_1

./: .gitignore  CMakeLists.txt  README.md
student_lib/: CMakeLists.txt  student_tasks.c  student_tasks.cpp  student_tasks.h  student_tasks.hpp
tests/: CMakeLists.txt  custom_main.cpp  score_calculator.h  test_cpp_tasks.cpp  test_student_tasks.cpp
